clusters/mlx-home-dev/mlx-charts/foundry-vtt/tjk/foundry-vtt-tjk-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-vtt-tjk-ingress
  namespace: foundry-vtt-tjk
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dev-blint.sakagegaming.com`) 
      services:
        - kind: Service
          name: foundry-vtt-tjk
          passHostHeader: true
          port: 80
